--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ ul {
     padding: 0;
 }
 
+a {
+    display:block;
+    text-decoration: none;
+    color: #ffffff;
+}
+
 .circle-menu {
     display: flex;
     width: 20vw;
